pdf analisys creation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3426,6 +3426,84 @@
     "\n",
     "plt.savefig('Analise-finalidades-regiao.png', dpi=400, bbox_inches='tight');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fpdf import FPDF\n",
+    "# Classe personalizada para adicionar imagem ao PDF\n",
+    "class PDFWithImage(FPDF):\n",
+    "\n",
+    "    def header(self):\n",
+    "        # Titulos\n",
+    "        self.set_font('Arial', '', 16)\n",
+    "        self.cell(0, 10, 'ANALISE EXPLORATÓRIA DE DADOS ', 0, 1, 'c')\n",
+    "\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.cell(0, 4, 'Python Insights', 0, 1, 'c')\n",
+    "\n",
+    "    def footer(self):\n",
+    "        # Rodapé (opcional)\n",
+    "        self.set_y( -15 )\n",
+    "        self.set_font('Arial', 'I', 8)\n",
+    "        self.cell(0, 10, f'Página { self.page_no() }', 0, 0, 'C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crie uma instância do PDFWithImage\n",
+    "pdf = PDFWithImage()\n",
+    "pdf.add_page()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adicione um descritivo de texto\n",
+    "pdf.set_font('Arial', size=12)\n",
+    "\n",
+    "texto = \"\"\"\n",
+    "Esse relatório refere-se ao cenário de operação de crédito,\n",
+    "solicitada por estados, Distrito Federal e municípios.\n",
+    "\"\"\"\n",
+    "pdf.multi_cell(0, 5, texto)\n",
+    "pdf.image(\"Analise-Anual.png\", x=10, y=pdf.get_y() + 5, w=185)\n",
+    "\n",
+    "pdf.image(\"Analise-percentual.png\", x=10, y=pdf.get_y() + 120, w=185)\n",
+    "\n",
+    "# Pagina 2\n",
+    "pdf.add_page()\n",
+    "pdf.image(\"Analise-finalidades.png\", x=10, y=pdf.get_y() + 10, w=185)\n",
+    "\n",
+    "pdf.image(\"Analise-finalidades-regiao.png\", x=10, y=pdf.get_y() + 120, w=185)\n",
+    "\n",
+    "#pdf.multi_cell(0, pdf.get_y(), texto)\n",
+    "\n",
+    "# Salve o PDF em um arquivo\n",
+    "pdf_file = \"Material.pdf\"\n",
+    "pdf.output(pdf_file)"
+   ]
   }
  ],
  "metadata": {
